# LibConfig

./: README.md
config_static/: CMakeLists.txt  config_file.cpp  config_file.h  config_file_c.cpp  config_file_c.h  config_part.cpp  config_part.h  config_part_c.cpp  config_part_c.h  config_value.cpp  config_value_c.cpp  config_value_c.h  libconfig.cpp  libconfig.h  type.h  utils.cpp  utils.h
example/: .gitignore  CMakeLists.txt  main.cpp  test.c  test.h
